# lab8

./: .gitignore  CMakeLists.txt
Task_1_Voting/: classmates.txt  main.cpp  voting.cpp  voting.h
Task_2_Store/: HashTable.cpp  HashTable.h  main.cpp
Task_3_Images/: main.cpp
